--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <header>
     <div class="Logo">
-        <img src="/Logo.avif" alt="Logo">
+        <img src="Logo.avif" alt="Logo">
     </div>
 
     <div class="Search-bar">
