--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
    
 <div class="textOnImg">
-    <img src="/Image/White1 (1).jpg" alt=" White">
+    <img src="White1 (1).jpg" alt=" White">
 
     <div
     class="Text">
