--- a/index.html
+++ b/index.html
@@ -55,27 +55,27 @@ EXPLORE 31,000 + LUXURY CARS, SUPERCARS AND EXOTICS CARS FOR SALE WORLD WIDE IN 
 <div class="product-logos">
     
   <div class="card">
-   <img src="/Popular Makes/logo4.jpg" alt="logo">
+   <img src="Popular Makes/logo4.jpg" alt="logo">
   </div>  
 
  <div class="card">
-    <img src="/Popular Makes/logo1.jpg" alt="logo" >
+    <img src="Popular Makes/logo1.jpg" alt="logo" >
  </div>
   
  <div class="card">
-<img src="/Popular Makes/logo2.jpg" alt="logo">
+<img src="Popular Makes/logo2.jpg" alt="logo">
  </div>
 
  <div class="card">
-<img src="/Popular Makes/logo3.jpg" alt="logo">
+<img src="Popular Makes/logo3.jpg" alt="logo">
  </div>
 
  <div class="card">
-    <img src="/Popular Makes/logo7.jpg" alt="logo">
+    <img src="Popular Makes/logo7.jpg" alt="logo">
  </div>
 
 <div class="card none">
-    <img src="/Popular Makes/logo8.jpg" alt="logo">
+    <img src="Popular Makes/logo8.jpg" alt="logo">
 </div>
 
 </div>
