--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ EXPLORE 31,000 + LUXURY CARS, SUPERCARS AND EXOTICS CARS FOR SALE WORLD WIDE IN 
 <div class="popular-container">
 
     <div class="popular-card">
-    <img src="/Image/Grieve.jpg" alt="">
+    <img src="Imag2e/Grieve.jpg" alt="">
      
     <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>
         10 listings       ->    
@@ -98,7 +98,7 @@ EXPLORE 31,000 + LUXURY CARS, SUPERCARS AND EXOTICS CARS FOR SALE WORLD WIDE IN 
     </div>
 
     <div class="popular-card">
-        <img src="/Image/Nemesis vs3.0.jpg" alt="">
+        <img src="Image2/Nemesis vs3.0.jpg" alt="">
          
         <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>
             10 listings       ->    
@@ -107,20 +107,20 @@ EXPLORE 31,000 + LUXURY CARS, SUPERCARS AND EXOTICS CARS FOR SALE WORLD WIDE IN 
         </div>
 
 <div class="popular-card">
-<img src="/Image/Orange.jpg" alt="">           
+<img src="Image2/Orange.jpg" alt="">           
 <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>
 10 listings       ->    
 </h5> </a> 
 </div>  
 
 <div class="popular-card">
-<img src="/Image/pexels-christian-9-454702-1164778.jpg" alt="">
+<img src="Image2/pexels-christian-9-454702-1164778.jpg" alt="">
      <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>10 listings       ->    
 </h5> </a>
 </div>
 
 <div class="popular-card">
-    <img src="/Image/pexels-photo-210019.jpeg" alt="">
+    <img src="Image2/pexels-photo-210019.jpeg" alt="">
 <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>10 listings       ->    </h5> </a>
 </div>
 </div> 
@@ -132,33 +132,33 @@ EXPLORE 31,000 + LUXURY CARS, SUPERCARS AND EXOTICS CARS FOR SALE WORLD WIDE IN 
 <div class="popular-container">
 
 <div class="popular-card">
-    <img src="/Image/pexels-photo-919073.webp" alt="">
+    <img src="Image2/pexels-photo-919073.webp" alt="">
 <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>10 listings       ->  </h5> </a>  
 </div>
 
 <div class="popular-card">
-    <img src="/Image/Red one.jpeg" alt="">
+    <img src="Image2/Red one.jpeg" alt="">
     <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>10 listings       ->    </h5> </a>
 </div>
 
 <div class="popular-card">
-    <img src="/Image/Speed Series.jpg" alt="">
+    <img src="Image2/Speed Series.jpg" alt="">
     <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>10 listings       ->    </h5> </a>
 </div>
 
 <div class="popular-card">
-    <img src="/Image/Sport10.jpg" alt="">
+    <img src="Image2/Sport10.jpg" alt="">
     <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>10 listings       ->    </h5> </a>
 </div>
 
 <div class="popular-card">
-    <img src="/Image/Sport3.jpg" alt="">
+    <img src="Image2/Sport3.jpg" alt="">
     <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>10 listings       ->    </h5> </a>
 </div>
 
 </div>
 
 
-   <script src="/javascript.js"></script>
+   <script src="javascript.js"></script>
 </body>
 </html>
