--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> K.edition.com.ng </title>
 <!-- Autor Kosnika -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -90,7 +90,7 @@ EXPLORE 31,000 + LUXURY CARS, SUPERCARS AND EXOTICS CARS FOR SALE WORLD WIDE IN 
 <div class="popular-container">
 
     <div class="popular-card">
-    <img src="Imag2e/Grieve.jpg" alt="">
+    <img src="Image2/Grieve.jpg" alt="">
      
     <a href="http://"> <h5>  Bugatti Chiron <br> <br> <br>
         10 listings       ->    
