--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
 <body>
     
 <div class="video-container">
-    <video src="/video/5309381-hd_1920_1080_25fps.mp4" muted autoplay loop> Video is not supported by browser </video>
+    <video src="AboutUs/5309381-hd_1920_1080_25fps.mp4" muted autoplay loop> Video is not supported by browser </video>
 </div>
 
 <div class="text">
@@ -45,7 +45,7 @@
 <h2> Connecting Buyers and Sellers Worldwide, to Facilitate Life's <br> Most Important Personal Transaction </h2> <br> 
 
 <div class="Img">
-<img src="/Image/Orange.jpg" alt="Orange">
+<img src="AboutUs/Orange.jpg" alt="Orange">
 </div> <br> <br>
 
 <h2 style="text-align: left;" class="container-text"> The Best of the Best </h2> 
@@ -62,7 +62,7 @@
 
 <a href="#">
 <div class="card">
- <img src="/Image/ferarri int.jpg" alt=""> 
+ <img src="AboutUs/ferarri int.jpg" alt=""> 
 <div class="overlay">
     <h2> Interior Personalization </h2>
     <p> 18, 899 Listing </p>
@@ -71,7 +71,7 @@
 
 <a href="#">
 <div class="card">
-<img src="/Image/LuxuryCars2.jpg" alt="">
+<img src="AboutUs/LuxuryCars2.jpg" alt="">
 <div class="overlay">
 <h2> Cars </h2>
 <p> 70,344 Listing</p>
@@ -80,7 +80,7 @@
 
 <a href="#">
 <div class="card">
-    <img src="/Image/planes.jpg" alt=""> 
+    <img src="AboutUs/planes.jpg" alt=""> 
     <div class="overlay">
     <h2> Luxury Planes and Jets </h2>
     <p> 39,344 Listing</p>
@@ -89,7 +89,7 @@
 
     <a href="#">
         <div class="card">
-            <img src="/Image/Yatcch.jpg" alt=""> 
+            <img src="AboutUs/Yatcch.jpg" alt=""> 
             <div class="overlay">
             <h2> Yatch </h2>
             <p> 19,344 Listing</p>
@@ -101,7 +101,7 @@
 <br> 
 
 <div class="container">
-<img src="/Image/Red3.jpg" alt="Tin">
+<img src="AboutUs/Red3.jpg" alt="Tin">
 </div>
 
 <div class="container-text">
@@ -115,7 +115,7 @@
 <section class="sec3">
 
 <div class="container2">
-   <img  src="/Sport11 (1).jpg" alt=""> 
+   <img  src="AboutUs/Sport11 (1).jpg" alt=""> 
 </div>
 <br> <br>
 <h1> Our Network </h1> <br> <br>
@@ -161,39 +161,39 @@
 <div class="carouse1">
     
 <div class="card">
-  <img src="/The-Team/founder.jpg" alt="">  
+  <img src="The-Team/founder.jpg" alt="">  
 <br> <br>
   <h5> Tanya Wellstine Danya </h5> <br>
   <p> CEO </p>
 </div>
 
 <div class="card">
-    <img src="/The-Team/manager.jpg" alt=""> <br> <br>
+    <img src="The-Team/manager.jpg" alt=""> <br> <br>
     <h5> Rendrick Gresivino </h5> <br>
     <p> GENERAL MANAGER </p> 
 </div>
 
 <div class="card">
-    <img src="/The-Team/found.jpg" alt=""> <br> <br>
+    <img src="The-Team/found.jpg" alt=""> <br> <br>
     <h5> Tina Swevilla </h5> <br>
     <p> CTO </p> 
 </div>
 
 <div class="card">
-    <img src="/The-Team/ceo 3.jpg" alt=""> <br> <br>
+    <img src="The-Team/ceo 3.jpg" alt=""> <br> <br>
     <h5> Diana Royce </h5> <br>
     <p> Head Of Sales </p> 
 </div>
 
 <div class="card">
-    <img src="/The-Team/foun.jpg" alt=""> <br> <br>
+    <img src="The-Team/foun.jpg" alt=""> <br> <br>
     <h5> Blessing Okiaria </h5> <br>
     <p> HEAD OF FINANACE </p> 
 </div>
 
 
 <div class="card">
-    <img src="/The-Team/car expert.jpg" alt=""> <br> <br>
+    <img src="The-Team/car expert.jpg" alt=""> <br> <br>
     <h5> Kosnika Matthew </h5> <br>
     <p> PRODUCT ANALYST AND STRATEGIST </p> 
 </div>
@@ -209,15 +209,15 @@
  <p> We have experienced <br> <br>technologist behind our growth  </p>
 
 <div class="Logos">
-  <img src="/investorLogo/clock5.jpg" alt="Honey-Luxury">  
-  <img src="/investorLogo/home logo.jpg" alt="Stolas-Auto">
+  <img src="investorLogo/clock5.jpg" alt="Honey-Luxury">  
+  <img src="investorLogo/home logo.jpg" alt="Stolas-Auto">
 </div>
 
 </div>
 
 <div class="Sell-with-Us">
   
- <img src="/LuxuryCars1.jpg" alt="R1(12)" srcset="">   
+ <img src="AboutUs/LuxuryCars1.jpg" alt="R1(12)" srcset="">   
 
 </div>
 
@@ -344,4 +344,4 @@ window.addEventListener('scroll', () => {
 </body>
 </html>
 
-<!-- <i class="fa-light fa-bars"></i> -->
+
