--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </button>
 
     <ul class="nav-links" id="nav-links">
-        <a href="/index.html" style="text-decoration: underline;">Home</a>
-        <a href="/index.html" style="text-decoration: underline;"> About </a>
-        <a href="/index.html" style="text-decoration: underline;"> Contact_Us </a>
-        <a href="/index.html" style="text-decoration: underline;"> Services </a>
+        <a href="index.html" style="text-decoration: underline;">Home</a>
+        <a href="About.html" style="text-decoration: underline;"> About </a>
+        <a href="#" style="text-decoration: underline;"> Contact_Us </a>
+        <a href="#" style="text-decoration: underline;"> Services </a>
     </ul>
 </nav>
    </header>
