--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <ul class="nav-links" id="nav-links">
         <a href="index.html" style="text-decoration: underline;">Home</a>
         <a href="About.html" style="text-decoration: underline;"> About </a>
-        <a href="#" style="text-decoration: underline;"> Contact_Us </a>
+        <a href="contact.html" style="text-decoration: underline;"> Contact_Us </a>
         <a href="#" style="text-decoration: underline;"> Services </a>
     </ul>
 </nav>
