--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
         <a href="index.html">Home</a>
         <a href="About.html" style="color: red;"> About_Us</a>
         <a href="contact.html">Contact</a>
-        <a href="#" id="SignUp">SignUp</a>
+        <a href="SignUp.html" id="SignUp">SignUp</a>
     </ul>
 </nav>
 </header>
