--- a/SignUp.html
+++ b/SignUp.html
@@ -222,7 +222,7 @@ ul a:hover{
 
     <div class="video-container">
         <video width="200" autoplay muted loop > 
-            <source src="/video/Car Back (2).mp4">
+            <source src="Car Back (2).mp4">
         </video>
     </div> 
     
