--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </button>
 
         <ul class="nav-links" id="nav-links">
-            <li class="closeSidebar" style="color: #333;">&times;</li>
+            <li class="close-sidebar" style="color: #333;">&times;</li>
             <li><a href="index.html" style="color: red;">Home</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="contact.html">Contact_Us</a></li>
@@ -255,7 +255,7 @@
     <script>
         const navbuttons = document.getElementById('nav-btn');
         const navlinks = document.getElementById('nav-links');
-        const closeSidebar = document.querySelector('.closeSidebar');
+        const closeSidebar = document.querySelector('.close-sidebar');
 
         navbuttons.addEventListener('click', () => {
             navlinks.classList.toggle('show');
